<resources>
    <string name="app_name">Reis</string>
    <string name="your_profile">Profile</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="create_post">Create post</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="example_post_text">Today is a good day to make a post in this social network, this is actually just an example text I write to have some lines of text</string>
    <string name="example_post_username">Hayden</string>
    <string name="search_hint">Search...</string>
    <string name="posts">Posts</string>
    <string name="logout">Logout</string>
    <string name="email">E-Mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="go_back">Go back</string>
    <string name="sign_up">Sign up</string>
    <string name="no_post_helper">You are either not currently following any users or the users you are following have made no posts, to search for more users tap the search icon in the toolbar at the top left.</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="success_registration">Successfully registered account</string>
    <string name="error_password_too_short">The password must be at least %d digits long</string>
    <string name="error_password_no_special_characters">The password must contain a special character</string>
    <string name="error_password_no_lower_case">The password must contain a lower case letter</string>
    <string name="error_password_no_upper_case">The password must contain a upper case letter</string>
    <string name="error_username_too_short">The username can\'t have less than %d characters</string>
    <string name="error_username_too_long">The username can\'t have more than %d characters</string>
    <string name="error_username_in_use">The username is already used by another user</string>
    <string name="error_not_a_valid_email">Please enter a valid E-Mail</string>
    <string name="error_input_empty">The fields must not be empty</string>
    <string name="error_incorrectly_repeated_password">The passwords do not match</string>
    <string name="error_invalid_credentials">The E-Mail or password is incorrect</string>
    <string name="error_unknown">An unknown error occurred</string>
    <string name="choose_image">Choose image</string>
    <string name="enter_post_text">Enter post text...</string>
    <string name="post">Post</string>
    <string name="error_invalid_file">The chosen image is invalid</string>
    <string name="username">Username</string>
    <string name="no_description">No Description</string>
    <string name="description">Description</string>
    <string name="update_profile">Update Profile</string>
    <string name="edit_your_profile">Edit your Profile</string>
    <string name="profile_updated">Profile updated</string>
    <string name="no_changes_detected">You didn\'t change anything</string>
    <string name="delete_post_dialog_title">Do you want to delete that post?</string>
    <string name="delete_post_dialog_message">This action cannot be undone.</string>
    <string name="delete_post_dialog_positive">Yes</string>
    <string name="delete_post_dialog_negative">No</string>
    <string name="unfollow">Unfollow</string>
    <string name="follow">Follow</string>
    <string name="liked_by_dialog_title">Liked by</string>
    <string name="error_no_image_chosen">Please choose an image for the post</string>
    <string name="enter_comment">Enter Comment</string>
    <string name="comments">Comments</string>
    <string name="example_post_title">EXAMPLE_</string>
</resources>