<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_person"
        android:title="" />

    <item
        android:id="@+id/settingsFragment"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings" />

    <item
        android:id="@+id/searchFragment"
        android:title="@string/search"
        android:icon="@drawable/ic_search" />

    <item
        android:id="@+id/notificationFragment"
        android:title="@string/notifications"
        android:icon="@drawable/ic_notifications" />

    <item
        android:id="@+id/createPostFragment"
        android:title="@string/create_post"
        android:icon="@drawable/ic_create_post" />

    <item
        android:id="@+id/homeFragment"
        android:title="@string/home"
        android:icon="@drawable/ic_home" />

</menu>